049b401f-67e8-45fd-b9fe-4729bec2c36e/1db80f47-e09a-4901-a45a-969c063ae097/2146c597-dc6b-4ccd-88c2-031aeaef96e5/graph94/kubernates/rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-service-2146c597-dc6b-4ccd-88c2-031aeaef96e5
  namespace: a39bf9b7-4e0e-4638-8c8a-602100be1138
  labels:
    app: rest-app-2146c597-dc6b-4ccd-88c2-031aeaef96e5
spec:
  selector:
    app: rest-app-2146c597-dc6b-4ccd-88c2-031aeaef96e5
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
