049b401f-67e8-45fd-b9fe-4729bec2c36e/1db80f47-e09a-4901-a45a-969c063ae097/2146c597-dc6b-4ccd-88c2-031aeaef96e5/graph94/kubernates/rest-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rest-ingress-2146c597-dc6b-4ccd-88c2-031aeaef96e5
  namespace: a39bf9b7-4e0e-4638-8c8a-602100be1138
  annotations:
    ngrok.com/ingress-mode: edge
  labels:
    app: rest-app-2146c597-dc6b-4ccd-88c2-031aeaef96e5
spec:
  ingressClassName: ngrok
  rules:
    - host: honestly-handy-herring.ngrok-free.app
      http:
        paths:
          - path: /febe-rest-2146c597-dc6b-4ccd-88c2-031aeaef96e5/
            pathType: Prefix
            backend:
              service:
                name: rest-service-2146c597-dc6b-4ccd-88c2-031aeaef96e5
                port:
                  number: 80
